@@ -1,3 +1,15 @@
+2012-02-23  Mike Fenton  <mifenton@rim.com>
+
+        [BlackBerry] Selection handler has compile failure with logs enabled.
+        https://bugs.webkit.org/show_bug.cgi?id=79392
+
+        Reviewed by Antonio Gomes.
+
+        Build Fix.  Update log to avoid usage of toString which was removed.
+
+        * WebKitSupport/SelectionHandler.cpp:
+        (BlackBerry::WebKit::SelectionHandler::selectionPositionChanged):
+
 2012-02-19  Antonio Gomes  <agomes@rim.com>
 
         Fat fingers - Add a clearer way to distinguish the node we want (shadow or non-shadow)
